--- a/registration.html
+++ b/registration.html
@@ -83,7 +83,7 @@
       </div>
     </footer>
   </div>
-  <script type="module" src="./src/js/registration.js"></script>
+  <script type="module" src="./built/js/registration.js"></script>
 </body>
 
 </html>
