--- a/registration.html
+++ b/registration.html
@@ -30,6 +30,7 @@
     </header>
     <main class="main">
       <img class="main-image" src="../logo.webp" alt="Main Image">
+      <div class="loader"></div> 
       <div class="form-container">
         <form class="form" id="registrationForm" action="">
             <div >
