--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </footer>
   </div>
-  <script type="module" src="./js/index.js"></script>
+  <script type="module" src="./built/js/index.js"></script>
 </body>
 
 </html>
