--- a/src/login.html
+++ b/src/login.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" src="./css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,25 +32,32 @@
     </header>
     <main class="main">
         <img class="main-image" src="./images/logo.webp" alt="Main Image">
+        <div class="loader"></div>
         <div class="form-container">
-          <form action="">
+          <form class="form" id="registrationForm" action="">            
+            <div>
               <div class="label-div">
-                  <label class="label-text" for="">Type your login</label>
-                  <input type="text" name="" id="">
+                <label class="label-text" for="emailInput">Type your email</label>
+                <input class="input-email" data-input="email" type="text" name="" id="emailInput">
               </div>
-              <div class="label-div">
-                  <label class="label-text" for="">Type your email</label>
-                  <input type="text" name="" id="">
+              <div class="error-block">
+                <p class="error email-error"></p>
               </div>
-              <div class="label-div">
-                  <label class="label-text" for="">Type your password</label>
-                  <input type="text" name="" id="">
-              </div>
-              <div class="label-div">
-                  <label class="label-text" for="">Repeat your password</label>
-                  <input type="text" name="" id="">
-              </div>
-            </form>
+            </div>
+
+            <div>
+                <div class="label-div">
+                  <label class="label-text" for="passwordInput">Type your password</label>
+                  <input class="input-password" data-input="password" type="password" name="" id="passwordInput">
+                </div>
+                <div class="error-block">
+                  <p class="error password-error"></p>
+                </div>
+            </div>
+            <div class="btn-block">
+              <button class="btn btn-outline-primary" id="registrationBtn">Log</button>
+            </div>
+          </form>
         </div>
       </main>
     <footer>
